<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

   <include layout="@layout/actionbar_app"
       android:id="@+id/actionbarRegister"/>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:layout_below="@+id/actionbarRegister"
       android:padding="10dp">

      <TextView
          android:id="@+id/txtInfo1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="4dp"
          android:layout_marginTop="10dp"
          android:text="@string/create_new_account"
          android:textColor="@android:color/black"
          android:textSize="20sp" />


      <EditText
          android:id="@+id/txtUsernameRegister"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/user_name"
          android:minHeight="48dp" />

      <EditText
          android:id="@+id/txtEmailRegister"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="25dp"
          android:hint="@string/email"
          android:inputType="textEmailAddress"
          android:minHeight="48dp" />

      <EditText
          android:id="@+id/txtPassword"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="32dp"
          android:hint="@string/password"
          android:inputType="textPassword"
          android:minHeight="48dp" />

      <Button
          android:id="@+id/btnRegister"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/hesap_olu_tur"
          android:background="@color/colorPrimary"
          android:textColor="@android:color/white"
          android:layout_marginTop="10dp"/>

      <Button
          android:id="@+id/btnLoginRegister"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:background="@color/colorAccent"
          android:text="@string/hesabinizla_g_r_yapin"
          android:textColor="@android:color/white" />


   </LinearLayout>



</RelativeLayout>